@@ -89,6 +89,7 @@ dependencies {
   compileOnly 'org.checkerframework:checker-qual:3.1.0'
   testCompileOnly 'org.checkerframework:checker-qual:3.1.0'
   checkerFramework 'org.checkerframework:checker:3.1.0'
+  // only needed for JDK 8
   checkerFrameworkAnnotatedJDK 'org.checkerframework:jdk8:3.1.0'
 }
 ```
@@ -103,6 +104,7 @@ if (project.hasProperty("cfLocal")) {
     compileOnly files(cfHome + "/checker/dist/checker-qual.jar")
     testCompileOnly files(cfHome + "/checker/dist/checker-qual.jar")
     checkerFramework files(cfHome + "/checker/dist/checker.jar")
+    // only needed for JDK 8
     checkerFrameworkAnnotatedJDK files(cfHome + "/checker/dist/jdk8.jar")
   }
 }
@@ -296,6 +298,16 @@ buildscript {
 
 apply plugin: 'org.checkerframework'
 ```
+
+### JDK 8 vs JDK 9+ implementation details
+
+The plugin attempts to automatically configure the Checker Framework on both Java 8 and Java 9+ JVMs,
+following the [best practices in the Checker Framework manual](https://checkerframework.org/manual/#javac).
+In particular:
+* If both the JVM and target versions are 8, it applies the Java 8 annotated JDK.
+* If the JVM version is 9+ and the target version is 8 (and the Checker Framework
+version is >= 2.11.0), use the Error Prone javac compiler.
+* If the JVM version is 9+, use the `--add-opens` option to `javac`.
 
 ## Credits
 
